<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F2FD">

        <include
            android:id="@+id/toolBar"
            layout="@layout/layout_toolbar" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:scrollbars="none"
            android:paddingHorizontal="@dimen/_18sdp"
            android:paddingTop="@dimen/_18sdp"
            android:paddingBottom="@dimen/_28sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_setting_card"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_4sdp">

                    <LinearLayout
                        android:id="@+id/rlt_music"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_setting_music" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/music" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/switch_music"
                            android:layout_width="@dimen/_48sdp"
                            android:layout_height="@dimen/_26sdp"
                            android:background="@drawable/bg_settings_switch"
                            android:button="@null"
                            android:clickable="false"
                            android:focusable="false"
                            tools:checked="false" />
                    </LinearLayout>

                    <View style="@style/SettingDivider" />

                    <LinearLayout
                        android:id="@+id/rlt_sound_fx"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_setting_volume" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/sound_fx" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/switch_sound_fx"
                            android:layout_width="@dimen/_48sdp"
                            android:layout_height="@dimen/_26sdp"
                            android:background="@drawable/bg_settings_switch"
                            android:button="@null"
                            android:clickable="false"
                            android:focusable="false"
                            tools:checked="true" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/bg_setting_card"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_4sdp">

                    <LinearLayout
                        android:id="@+id/rlt_language"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_language" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/language" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_language_value"
                            style="@style/SettingValue" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/SettingChevron" />
                    </LinearLayout>

                    <View style="@style/SettingDivider" />

                    <LinearLayout
                        android:id="@+id/rlt_share"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_share" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/share_with_friend" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/SettingChevron" />
                    </LinearLayout>

                    <View style="@style/SettingDivider" />

                    <LinearLayout
                        android:id="@+id/rlt_rate"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_rate" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/rate_5_stars" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/SettingChevron" />
                    </LinearLayout>

                    <View style="@style/SettingDivider" />

                    <LinearLayout
                        android:id="@+id/rlt_feedback"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_feedback" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/feedback" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/SettingChevron" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/bg_setting_card"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_4sdp">

                    <LinearLayout
                        android:id="@+id/rlt_policy"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_policy" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/privacy_policy" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/SettingChevron" />
                    </LinearLayout>

                    <View style="@style/SettingDivider" />

                    <LinearLayout
                        android:id="@+id/rlt_terms"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_setting_terms" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/terms_of_use" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/SettingChevron" />
                    </LinearLayout>

                    <View style="@style/SettingDivider" />

                    <LinearLayout
                        android:id="@+id/rlt_check_update"
                        style="@style/SettingRow">

                        <FrameLayout style="@style/SettingIconContainer">

                            <androidx.appcompat.widget.AppCompatImageView
                                style="@style/SettingIcon"
                                android:src="@drawable/ic_setting_update" />
                        </FrameLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/SettingTitle"
                            android:text="@string/check_for_update" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_version"
                            style="@style/SettingValue" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/SettingChevron" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
